alsa-lib (1.0.25-3) unstable; urgency=low

  * Merge from Ubuntu:
    - Remove trailing whitespace character from the end of the
      DEB_HOST_MULTIARCH definition, as it was breaking the plugin
      directory path.

 -- Jordi Mallach <jordi@debian.org>  Sat, 19 May 2012 18:12:58 +0200

alsa-lib (1.0.25-2) unstable; urgency=low

  * Upload to unstable.
  * Stop Build-Depending on libcxxtools-dev. Why we were doing this is a
    mystery.
  * Put the bi-arch horror on a diet: remove all lib64* stuff, and support
    lib32* for amd64 only (there's no point in supporting ppc64 in light
    of Multiarch). Simplify debian/rules bi-arch bits assuming the install
    dir is /usr/lib32 and doing no other calculations.
  * Handle installation of bi-arch files with .install files.
  * Use sed -i to modify bi-arch build Makefile.
  * Use dh_installdocs to install Doxygen documentation.
  * Stop suggesting lib32asound2-plugins, as it's going away.
  * Continue digging through lists of symbols of previous alsa-lib
    releases. libasound2.symbols is now based on 1.0.16, the version released
    with lenny.
  * Bump debhelper to version 9.

 -- Jordi Mallach <jordi@debian.org>  Sun, 12 Feb 2012 01:50:17 +0100

alsa-lib (1.0.25-1) experimental; urgency=low

  * New upstream release.
  * Update debian/changelog.ALSA.
  * Run source package through wrap-and-sort.
  * Edit add-maintainer-mode.patch to use AM_MAINTAINER_MODE([enable]).
  * Drop lp178442-ICE1712.patch (stolen from Git).
  * Drop pulseaudio_configuration.patch. PulseAudio should instead use
    the new alsa.conf.d directory to load the ALSA pulse config.
  * Drop relibtoolise.patch. Instead, Build-Depend on dh-autoreconf and
    adjust rules to use it.
  * Drop configure_cross_compile.patch, as it's apparently not needed
    anymore, and dh_autoreconf makes it unusable.
  * Don't configure with --enable-static anymore, as it breaks the build
    and it was useless anyway.