@@ -8,11 +8,12 @@ Build-Depends: autotools-dev,
                debhelper (>= 9),
                dh-autoreconf,
                doxygen,
+               dpkg-dev (>= 1.16.1),
                gcc-multilib [amd64],
                lib32gcc1 [amd64],
                libc6-dev-i386 [amd64],
                python-dev
-Standards-Version: 3.9.2
+Standards-Version: 3.9.3
 Homepage: http://www.alsa-project.org/
 Vcs-Svn: svn://anonscm.debian.org/pkg-alsa/trunk/alsa-lib
 Vcs-Browser: http://anonscm.debian.org/viewvc/pkg-alsa/trunk/alsa-lib/
@@ -35,6 +36,7 @@ Description: shared library for ALSA applications
 Package: libasound2-dev
 Architecture: linux-any
 Section: libdevel
+Multi-Arch: same
 Provides: libasound-dev
 Depends: libasound2 (= ${binary:Version}), libc6-dev | libc-dev, ${misc:Depends}
 Suggests: libasound2-doc
